Fix a layout issue where document width increases over 100% while loading

--- a/site/src/components/header.module.less
+++ b/site/src/components/header.module.less
@@ -4,6 +4,8 @@
   position: relative;
   z-index: @zindex-back-top - 1;
   background: @layout-header-background;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .header {
