--- a/site/src/layouts/base.module.less
+++ b/site/src/layouts/base.module.less
@@ -3,6 +3,7 @@
 
 .layout {
   min-height: 100vh;
+  width: 100%;
 }
 
 .githubCorners {
